--- a/paginatutorial.html
+++ b/paginatutorial.html
@@ -5,9 +5,9 @@
         <meta charset="utf-8">
         <title>Garota Segura</title>
         <link rel="stylesheet" type="text/css" href="estilo/estilo_tutorial.css">
-        <header>
+      <!--- <header>
           <div class="logo"></div>
-      </header>
+      </header>--->
     </head>
    
     <body>
