--- a/principal.html
+++ b/principal.html
@@ -3,7 +3,7 @@
     <!---Desenvolvida por Sara Silva e Fernanda Zanetti-->
     <head>
         <meta charset="utf-8">
-        <title>Otávio Nobre</title>
+        <title>Garota Segura</title>
         <link rel="stylesheet" type="text/css" href="estilo/estilo_principal.css">
     </head>
     <body>
